* fix 'newInstance() in Class has been deprecated'